# limusic

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: website.yml  windows-release.yml
crates/innertube/: Cargo.toml  clients.json
crates/innertube/examples/: resolve.rs
crates/innertube/src/: clients.rs  endpoints.rs  lib.rs  rustypipe_fallback.rs  transport.rs
crates/innertube/src/models/: browse.rs  context.rs  lyrics.rs  metadata.rs  mod.rs  player.rs
crates/innertube/tests/: live_smoke.rs
crates/listen-protocol/: Cargo.toml
crates/listen-protocol/src/: lib.rs
crates/player/: Cargo.toml
crates/player/examples/: play.rs
crates/player/src/: lib.rs
crates/sync-server/: Cargo.toml
crates/sync-server/src/: main.rs
docs/: BUILD-PLATFORMS.md
scripts/: release.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  discord.rs  lastfm.rs  lib.rs  lyrics.rs  media.rs  orchestrator.rs  session.rs  state.rs  tray.rs  webview.rs
src-tauri/src/cipher/: config.rs  extractor.rs  fetcher.rs  mod.rs
src-tauri/src/listentogether/: mod.rs
src-tauri/src/potoken/: jsutil.rs  mod.rs
ui/: README.md  components.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/lib/: api.ts  lt.svelte.ts  menu.ts  pagecache.ts  personal.check.ts  personal.ts  player.svelte.ts  theme.svelte.ts  thumb.ts  updater.svelte.ts  win.svelte.ts
ui/src/lib/components/: AccountMenu.svelte  AddToPlaylist.svelte  DiscordIcon.svelte  ErrorState.svelte  LastFmIcon.svelte  ListenTogether.svelte  LyricsPanel.svelte  MediaCard.svelte  MediaCardSkeleton.svelte  PlayerBar.svelte  PlaylistMenu.svelte  QueuePanel.svelte  QuickPicks.svelte  ResizeBorders.svelte  SettingsDialog.svelte  Shelf.svelte  Sidebar.svelte  Titlebar.svelte  TrackMenu.svelte  TrackRow.svelte  TrackRowSkeleton.svelte
ui/src/lib/components/ui/skeleton/: index.ts  skeleton.svelte
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
ui/src/routes/album/[id]/: +page.svelte
ui/src/routes/artist/[id]/: +page.svelte
ui/src/routes/list/: +page.svelte
ui/src/routes/playlist/[id]/: +page.svelte
ui/src/routes/search/: +page.svelte
ui/src/routes/search-more/: +page.svelte
website/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
website/src/: App.tsx  index.css  main.tsx
website/src/components/: Aurora.tsx
website/src/lib/: github.ts
