[workspace]
resolver = "2"
members = [
    "crates/innertube",
    "crates/player",
    "crates/listen-protocol",
    "crates/sync-server",
    "src-tauri",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
anyhow = "1"
thiserror = "2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rand = "0.8"
listen-protocol = { path = "crates/listen-protocol" }

# Release profile: thin LTO + one codegen unit for cross-crate optimization, symbols stripped
# for size (this binary ships via AppImage self-update — size = every user's download).
# panic stays "unwind": an abort in the mpv event thread or a tokio task would kill playback
# for the whole app instead of degrading.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
