[package]
name = "limusic-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Limusic — desktop YouTube Music client"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tauri = { version = "2", features = ["webview-data-url"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
# Phase 2 extraction stack (cipher + PoToken). context/04, 05, 13.
base64 = "0.22"
regex = "1"
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }

innertube = { path = "../crates/innertube" }
player = { path = "../crates/player" }
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
# Listen Together: shared wire types + WebSocket client (wss via rustls). context/19.
listen-protocol = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { workspace = true }
rand = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
discord-rich-presence = "1.1.0"
# Last.fm API signature (api_sig is md5 of the sorted params + secret).
md-5 = "0.10"
