[package]
name = "player"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
# libmpv2 is the maintained fork of the abandoned `libmpv` crate (adopted in the Phase 0 spike).
libmpv2 = "4"
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }

[[example]]
name = "play"
